--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         </div>
 
     </div>
+    <div>
+        <button id="b1" onclick="c('Go to Pokemon Website')"><a href="pokemon\index.html">Pokemon Website</a></button>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
